--- a/work.html
+++ b/work.html
@@ -64,7 +64,7 @@
       <div class="projects">
         <div class="item">
           <a href="https://sad-albattani-9b44de.netlify.com">
-            <img src="img/projects/textToSpeech.png" alt="Project" />
+            <img src="img/projects/textToSpeechEdit.png" alt="Project" />
           </a>
           <a href="https://sad-albattani-9b44de.netlify.com" class="btn-light">
             <i class="fas fa-eye"></i> Text To Speech Translator - View on Web
@@ -73,6 +73,18 @@
             href="https://github.com/siddhantsahare/text-to-speech"
             class="btn-dark"
           >
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="https://eager-bohr-6f2fcd.netlify.com/">
+            <img src="img/projects/loginUI.png" alt="Project" />
+          </a>
+          <a href="https://eager-bohr-6f2fcd.netlify.com/" class="btn-light">
+            <i class="fas fa-eye"></i> Login & Signup Cool UI - View on Web
+          </a>
+          <a href="https://github.com/siddhantsahare/loginUI" class="btn-dark">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
@@ -88,7 +100,25 @@
             <i class="fas fa-eye"></i> Search Engine for Images - View on Web
           </a>
           <a
-            href="https://github.com/siddhantsahare/imageFinder"
+            href="https://github.com/siddhantsahare/imageSearchEngine"
+            class="btn-dark"
+          >
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="https://determined-feynman-3d54c0.netlify.com">
+            <img src="img/projects/lyricsApp.png" alt="Project" />
+          </a>
+          <a
+            href="https://determined-feynman-3d54c0.netlify.com"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Lyrics Web App - View on Web
+          </a>
+          <a
+            href="https://github.com/siddhantsahare/lyricsApp"
             class="btn-dark"
           >
             <i class="fab fa-github"></i> Github
@@ -112,13 +142,28 @@
 
         <div class="item">
           <a href="https://jolly-lamport-b01c2e.netlify.com">
-            <img src="img/projects/blogtheme.png" alt="Project" />
+            <img src="img/projects/blogtheme-min.png" alt="Project" />
           </a>
           <a href="https://jolly-lamport-b01c2e.netlify.com" class="btn-light">
             <i class="fas fa-eye"></i> Advanced Blog Theme - View on Web
           </a>
           <a
             href="https://github.com/siddhantsahare/blogtheme"
+            class="btn-dark"
+          >
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="https://trusting-kilby-a30aac.netlify.com">
+            <img src="img/projects/dashboard.png" alt="Project" />
+          </a>
+          <a href="https://trusting-kilby-a30aac.netlify.com" class="btn-light">
+            <i class="fas fa-eye"></i> Dashboard Theme - View on Web
+          </a>
+          <a
+            href="https://github.com/siddhantsahare/DashboardTheme"
             class="btn-dark"
           >
             <i class="fab fa-github"></i> Github
