Changed images a bit

--- a/work.html
+++ b/work.html
@@ -64,7 +64,7 @@
       <div class="projects">
         <div class="item">
           <a href="https://sad-albattani-9b44de.netlify.com">
-            <img src="img/projects/textToSpeechEdit.png" alt="Project" />
+            <img src="img/projects/textToSpeechJPG.jpg" alt="Project" />
           </a>
           <a href="https://sad-albattani-9b44de.netlify.com" class="btn-light">
             <i class="fas fa-eye"></i> Text To Speech Translator - View on Web
@@ -76,22 +76,24 @@
             <i class="fab fa-github"></i> Github
           </a>
         </div>
-
         <div class="item">
-          <a href="https://eager-bohr-6f2fcd.netlify.com/">
-            <img src="img/projects/loginUI.png" alt="Project" />
+          <a href="https://jolly-lamport-b01c2e.netlify.com">
+            <img src="img/projects/advancedThemeJPG.jpg" alt="Project" />
           </a>
-          <a href="https://eager-bohr-6f2fcd.netlify.com/" class="btn-light">
-            <i class="fas fa-eye"></i> Login & Signup Cool UI - View on Web
+          <a href="https://jolly-lamport-b01c2e.netlify.com" class="btn-light">
+            <i class="fas fa-eye"></i> Advanced Blog Theme - View on Web
           </a>
-          <a href="https://github.com/siddhantsahare/loginUI" class="btn-dark">
+          <a
+            href="https://github.com/siddhantsahare/blogtheme"
+            class="btn-dark"
+          >
             <i class="fab fa-github"></i> Github
           </a>
         </div>
 
         <div class="item">
           <a href="https://hardcore-blackwell-089cb3.netlify.com">
-            <img src="img/projects/imageFinder.png" alt="Project" />
+            <img src="img/projects/imageFinderJPG.jpg" alt="Project" />
           </a>
           <a
             href="https://hardcore-blackwell-089cb3.netlify.com"
@@ -109,7 +111,7 @@
 
         <div class="item">
           <a href="https://determined-feynman-3d54c0.netlify.com">
-            <img src="img/projects/lyricsApp.png" alt="Project" />
+            <img src="img/projects/lyricsAppJPG.jpg" alt="Project" />
           </a>
           <a
             href="https://determined-feynman-3d54c0.netlify.com"
@@ -121,6 +123,18 @@
             href="https://github.com/siddhantsahare/lyricsApp"
             class="btn-dark"
           >
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="https://eager-bohr-6f2fcd.netlify.com/">
+            <img src="img/projects/loginUIJPG.jpg" alt="Project" />
+          </a>
+          <a href="https://eager-bohr-6f2fcd.netlify.com/" class="btn-light">
+            <i class="fas fa-eye"></i> Login & Signup Cool UI - View on Web
+          </a>
+          <a href="https://github.com/siddhantsahare/loginUI" class="btn-dark">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
@@ -141,23 +155,8 @@
         </div>
 
         <div class="item">
-          <a href="https://jolly-lamport-b01c2e.netlify.com">
-            <img src="img/projects/blogtheme-min.png" alt="Project" />
-          </a>
-          <a href="https://jolly-lamport-b01c2e.netlify.com" class="btn-light">
-            <i class="fas fa-eye"></i> Advanced Blog Theme - View on Web
-          </a>
-          <a
-            href="https://github.com/siddhantsahare/blogtheme"
-            class="btn-dark"
-          >
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-
-        <div class="item">
           <a href="https://trusting-kilby-a30aac.netlify.com">
-            <img src="img/projects/dashboard.png" alt="Project" />
+            <img src="img/projects/DashboardJPG.jpg" alt="Project" />
           </a>
           <a href="https://trusting-kilby-a30aac.netlify.com" class="btn-light">
             <i class="fas fa-eye"></i> Dashboard Theme - View on Web
