--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
             <img src="img/projects/textToSpeechJPG.jpg" alt="Project" />
           </a>
           <a href="https://sad-albattani-9b44de.netlify.com" class="btn-light">
-            <i class="fas fa-eye"></i> Text To Speech Translator - View on Web
+            <i class="fas fa-eye"></i> Text To Speech Translator
           </a>
           <a
             href="https://github.com/siddhantsahare/text-to-speech"
@@ -76,12 +76,28 @@
             <i class="fab fa-github"></i> Github
           </a>
         </div>
+
+        <div class="item">
+          <a href="https://tender-sinoussi-55f16f.netlify.com">
+            <img src="img/projects/jobify.jpg" alt="Project" />
+          </a>
+          <a
+            href="https://tender-sinoussi-55f16f.netlify.com"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Jobify - Job Portal
+          </a>
+          <a href="https://github.com/siddhantsahare/jobify" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
         <div class="item">
           <a href="https://jolly-lamport-b01c2e.netlify.com">
             <img src="img/projects/advancedThemeJPG.jpg" alt="Project" />
           </a>
           <a href="https://jolly-lamport-b01c2e.netlify.com" class="btn-light">
-            <i class="fas fa-eye"></i> Advanced Blog Theme - View on Web
+            <i class="fas fa-eye"></i> Advanced Blog Theme
           </a>
           <a
             href="https://github.com/siddhantsahare/blogtheme"
@@ -99,7 +115,7 @@
             href="https://hardcore-blackwell-089cb3.netlify.com"
             class="btn-light"
           >
-            <i class="fas fa-eye"></i> Search Engine for Images - View on Web
+            <i class="fas fa-eye"></i> Search Engine for Images
           </a>
           <a
             href="https://github.com/siddhantsahare/imageSearchEngine"
@@ -117,7 +133,7 @@
             href="https://determined-feynman-3d54c0.netlify.com"
             class="btn-light"
           >
-            <i class="fas fa-eye"></i> Lyrics Web App - View on Web
+            <i class="fas fa-eye"></i> Lyrics Web App
           </a>
           <a
             href="https://github.com/siddhantsahare/lyricsApp"
@@ -132,7 +148,7 @@
             <img src="img/projects/loginUIJPG.jpg" alt="Project" />
           </a>
           <a href="https://eager-bohr-6f2fcd.netlify.com/" class="btn-light">
-            <i class="fas fa-eye"></i> Login & Signup Cool UI - View on Web
+            <i class="fas fa-eye"></i> Login & Signup Cool UI
           </a>
           <a href="https://github.com/siddhantsahare/loginUI" class="btn-dark">
             <i class="fab fa-github"></i> Github
